When the default application is not on "/" make a send redirect to the correct URL for serving the application