@@ -28,6 +28,7 @@ import org.junit.Test;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 
+import java.net.HttpURLConnection;
 import java.net.URL;
 
 /** @author <a href="mailto:julien.viet@exoplatform.com">Julien Viet</a> */
@@ -43,11 +44,13 @@ public class RouteModuleMountAsDefaultTestCase extends AbstractStandaloneTestCas
 
   @Test
   public void testRenderRoot() throws Exception {
-    URL url = deploymentURL.toURI().resolve("foo").toURL();
-    driver.get(deploymentURL.toString());
-    String index = driver.findElement(By.tagName("body")).getText();
-    assertEquals("index", index);
-    assertEquals(url, new URL((String)Registry.get("url")));
+    URL url = deploymentURL;
+    HttpURLConnection conn = (HttpURLConnection)url.openConnection();
+    conn.setInstanceFollowRedirects(false);
+    assertEquals(302, conn.getResponseCode());
+    String location = conn.getHeaderField("Location");
+    url = new URL(location);
+    assertEquals("/juzu/foo", url.getPath());
   }
 
   @Test
